fix(api): add GetPublishedPosts endpoint (/post), updated openapi, added schema validation, dto
