# openapi.yaml
@@ -18,9 +18,37 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '500':
           $ref: '#/components/responses/InternalServerError'
+  /api/auth:
+    get:
+      tags: [ Auth ]
+      operationId: api_auth
+      description: Get JWT token with credentials
+      requestBody:
+        $ref: '#/components/requestBodies/AuthRequest'
+      responses:
+        '200':
+          $ref: '#/components/responses/TokenResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+        '401':
+          $ref: '#/components/responses/InvalidCredentialsError'
 
 components:
+  requestBodies:
+    AuthRequest:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AuthRequest'
   responses:
+    TokenResponse:
+      description: Token response
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/TokenResponse'
     Status:
       description: Service status
       content:
@@ -46,10 +74,25 @@ components:
       description: NotFound
     InternalServerError:
       description: Internal Server Error
+    InvalidCredentialsError:
+      description: Invalid credentials.
     Conflict:
       description: Confict
 
   schemas:
+    AuthRequest:
+      properties:
+        username:
+          type: string
+          example: admin
+        password:
+          type: string
+          example: 123456
+    TokenResponse:
+      properties:
+        token:
+          type: string
+          example: eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJpYXQiOjE2NTMwMDc3NDQsImV4cCI6MTY1MzAxMTM0NCwicm9sZXMiOlsiUk9MRV9BRE1JTiIsIlJPTEVfVVNFUiJdLCJ1c2VybmFtZSI6ImFkbWluIn0.l6VGK0WplMqBxsXXsAlYfrWCsOdxLo7hGv40i92PiZJ65mTVMlSSMbhGeseM6fsapN1fXnVrJP4fQqYGMuVpEUFD9SbrE8zZb2wy7gZ9a1heNlhW_6RZseht1_KyfS5Yw4wpjhOuPg6bN0vvWclLQZkxa6SUj-vlbMuBRtaNI1hvExnv-SefdZaT2eoQmnp8GxdLNgYcZ9-995qVlf947G9gnwjGgxaGvJNsZ_oQvcZI2m0XmW-GGuEwOyPve41JT3cJbX3ChnTRJ_YiZrEuT13vyE1cAp2tkqAqG6KLoP_oy3f1PKXqHe4k5F9l_JDOo6ACL4izzrcbyedwecVMbQ
     Status:
       properties:
         mysql:
