# src/Controller/RegistrationController.php
@@ -5,52 +5,27 @@ namespace ClownMeister\BohemiaApi\Controller;
 
 use ClownMeister\BohemiaApi\Entity\User;
 use ClownMeister\BohemiaApi\Form\RegistrationFormType;
-use ClownMeister\BohemiaApi\Security\EmailVerifier;
-use ClownMeister\BohemiaApi\Security\UsernameGenerator;
-use Doctrine\ORM\EntityManagerInterface;
-use Symfony\Bridge\Twig\Mime\TemplatedEmail;
+use ClownMeister\BohemiaApi\Handler\RegistrationHandler;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
-use Symfony\Component\Mime\Address;
-use Symfony\Component\PasswordHasher\Hasher\UserPasswordHasherInterface;
 use Symfony\Component\Routing\Annotation\Route;
 
 final class RegistrationController extends AbstractController
 {
-    public function __construct(private EmailVerifier $emailVerifier, private UsernameGenerator $usernameGenerator)
+    public function __construct(private RegistrationHandler $handler)
     {
     }
 
     #[Route('/register', name: 'app_register')]
-    public function index(Request $request, UserPasswordHasherInterface $userPasswordHasher,
-        EntityManagerInterface $entityManager
-    ): Response {
-        //TODO: move logic to handler
+    public function index(Request $request): Response
+    {
         $user = new User();
         $form = $this->createForm(RegistrationFormType::class, $user);
         $form->handleRequest($request);
 
         if ($form->isSubmitted() && $form->isValid()) {
-            $user->setPassword(
-                $userPasswordHasher->hashPassword(
-                    $user,
-                    $form->get('password')->getData()
-                )
-            );
-
-            $user->setUsername($this->usernameGenerator->generate($user));
-
-            $entityManager->persist($user);
-            $entityManager->flush();
-
-            $this->emailVerifier->sendEmailConfirmation('app_verify_email', $user,
-                (new TemplatedEmail())
-                    ->from(new Address('mailer@api.bohemia.com', 'Mailer'))
-                    ->to($user->getEmail())
-                    ->subject('Please Confirm your Email')
-                    ->htmlTemplate('email/confirmation_email.html.twig')
-            );
+            $this->handler->handle($user, $form);
 
             return $this->redirectToRoute('app_register_success');
         }
